[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
aiohttp = "^3.9.1"
aiosqlite = "^0.20.0"
alembic = "^1.13.0"
angr = "^9.2.81"
anthropic = "^0.33.0"
beautifulsoup4 = "^4.12.2"
coconut = "^3.1.1"
docker = "^7.0.0"
fastapi = "^0.112.0"
fire = "^0.6.0"
frozendict = "^2.3.10"
frozenlist = "^1.4.1"
google-api-python-client = "^2.111.0"
huggingface-hub = "^0.24.5"
ipython = "^8.18.1"
ipywidgets = "^8.1.1"
jq = "^1.7.0"
jsonschema = "^4.20.0"
jupyterlab = "^4.0.9"
llama-cpp-python = "^0.2.50"
matplotlib = "^3.8.2"
numpy = "^2.0.1"
openai = "^1.4.0"
ormar = "^0.20"
pandas = "^2.1.4"
pillow = "^10.1.0"
protobuf = "^5.27.3"
pydantic = "^2.0"
pyte = "^0.8.2"
python = "^3.11"
python-dotenv = "^1.0.1"
regex = "^2024.7.24"
requests = "^2.31.0"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
sortedcontainers = "^2.4.0"
sympy = "^1.12"
telethon = "^1.33.1"
toml = "^0.10.2"
tqdm = "^4.66.1"
transformers = "^4.36.1"
pytest = "^8.3.2"
replicate = "^0.32.1"
panel = "^1.5.0"

[tool.poetry.group.scraping]
optional = true

[tool.poetry.group.scraping.dependencies]
selenium = "^4.0.0"
undetected_chromedriver = "^3.0.0"